--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -90,84 +90,11 @@ jobs:
     name: Ubuntu Latest
     runs-on: ubuntu-latest
     steps:
-      - name: Cache Dependences
-        uses: actions/cache@v1.0.3
-        id: cache_dependences
-        with:
-          path: "~/dependencies"
-          key: ${{hashFiles('${{github.workspace}}/main.cc')}}
-
-      - name: Install Dependences
-        env:
-          CACHE_HIT: ${{steps.cache_dependences.outputs.cache-hit}}
+      - name: Install Dependencies
         run: |
-          if [[ "$CACHE_HIT" == 'true' ]]; then
-            echo 'Restoring caches...'
-            sudo cp --verbose --force --recursive ~/dependencies/* /
-          else
-            sudo apt update
-            sudo apt install --yes libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all libsqlite3-dev
-            sudo apt install --yes libbrotli-dev
-            mkdir -p ~/dependencies
-
-            for dep in libjsoncpp-dev libjsoncpp1; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in uuid-dev libuuid1; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in openssl libssl-dev libssl1.1; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in zlib1g-dev zlib1g; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in postgresql-all libecpg-dev libpq-dev postgresql-common postgresql-server-dev-all postgresql-13 postgresql-plperl-13 postgresql-plpython3-13 postgresql-pltcl-13 libtcl8.6; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in libecpg-compat3 libecpg6 libpgtypes3; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in libpq5 libgssapi-krb5-2 libldap-2.4-2 libcom-err2 libk5crypto3 libkrb5-3 libkrb5support0 libkeyutils1 libgnutls30 libsasl2-2 libgmp10 libidn2-0 libnettle8 libp11-kit0 libtasn1-6 libunistring2 libsasl2-modules-db libffi7 libdb5.3; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in lsb-base perl postgresql-client-common ssl-cert ucf netbase; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in perl-base libcrypt1 perl-modules-5.30 libperl5.30 libbz2-1.0 libgdbm-compat4 libgdbm6; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in postgresql-server-dev-13 postgresql-client-13 libedit2 libbsd0 libtinfo6; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in locales locales-all libc-bin libc-l10n tzdata libicu67 libpam0g libxml2 libxslt1.1 libaudit1 libcap-ng0 liblzma5 libgcrypt20 libaudit-common; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in libsqlite3-dev libsqlite3-0; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-
-            for dep in libbrotli-dev libbrotli1; do
-              sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
-            done
-          fi
-
-      #      - name: Install Dependencies
-      #        run: |
-      #          sudo apt update
-      #          sudo apt install libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all libsqlite3-dev
-      #          sudo apt install libbrotli-dev
+          sudo apt update
+          sudo apt install libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all libsqlite3-dev
+          sudo apt install libbrotli-dev
 
       - name: Checkout TechminoBackend source code
         uses: actions/checkout@v2
