--- a/config.json
+++ b/config.json
@@ -226,18 +226,28 @@
     //plugins: Define all plugins running in the application
     "plugins": [
         {
-            //name: The class name of the plugin
             "name": "tech::plugin::Configurator",
-            //dependencies: Plugins that the plugin depends on. It can be commented out
-            "dependencies": [],
-            //config: The configuration of the plugin. This json object is the parameter to initialize the plugin.
-            //It can be commented out
             "config": {
-                "auth": {
-                    "auth_token_expire_time": 432000,
-                    "access_token_expire_time": 1800
-                },
-                "port": 10027,
+                "auth_token_expire_time": 432000,
+                "access_token_expire_time": 1800
+            }
+        },
+        {
+            "name": "tech::plugin::ChatManager",
+            "dependencies": [
+                "tech::plugin::Configurator"
+            ],
+            "config": {
+                "id": "room_chat",
+                "name": "Chat room"
+            }
+        },
+        {
+            "name": "tech::plugin::PlayManager",
+            "dependencies": [
+                "tech::plugin::Configurator"
+            ],
+            "config": {
                 "room_types": [
                     {
                         "name": "unlimited",
